comment box doesn't move. fixed the image to be as big as it can be without overflowing the screen

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,7 +11,8 @@
 /* https://github.com/Aathi/firebase-storage-ember-example/blob/master/app/styles/app.css */
 .img-responsive {
   max-width: 100% !important;
-  height: 350px;
+  max-height: 75vh;
+  height: auto;
   display: block;
 }
 
@@ -96,6 +97,6 @@
   text-shadow: rgba(0,0,0,0.9) 1px 2px 9px;
 }
 .scroll {
-    height: 90vh;
+    height: 70vh;
     overflow: scroll;
 }
